--- a/_posts/2016-06-09-no-image.markdown
+++ b/_posts/2016-06-09-no-image.markdown
@@ -1,10 +1,14 @@
 ---
 layout: post
 title:  "Post with no image"
-categories: jekyll update
 ---
-When there is no image mentioned in the front-matter, default image will be displayed. You can change this image to any other one that suits your needs.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non iaculis risus. Phasellus vitae nunc ac lectus finibus porttitor. Sed vel enim vulputate, euismod neque maximus, tincidunt turpis. Aenean accumsan leo eget dui porta pulvinar. Sed tincidunt, nisi non efficitur tempus, enim lectus aliquam arcu, at dignissim ligula ex eu quam. Suspendisse gravida dapibus ultrices. Vivamus convallis nulla nisl, a imperdiet felis pellentesque in. Nulla facilisi. Integer aliquet sed orci eu tempor. Sed viverra ullamcorper commodo.
+<h2>Python desarrollador Senior</h2>
 
-Morbi vestibulum sem eget maximus feugiat. Curabitur vehicula magna in molestie dignissim. Nam gravida leo non purus cursus, id accumsan justo tincidunt. Donec accumsan purus mauris, vitae luctus magna faucibus vitae. Nullam tincidunt urna scelerisque, hendrerit mi ac, sagittis ligula. Curabitur convallis eros eu fringilla maximus. Donec lobortis scelerisque enim eu molestie. Duis ac mi quis risus auctor vulputate.
+<h2>Nombre de la empresa</h2>
+
+sitio: [pythonmendoza.github.io](mailto:pythonmendoza.github.io)
+
+email: [pythonmendoza@gmail.com](mailto:pythonmendoza@gmail.com)
+
+job: Senior para trabajar con Python  loremipsumloremipsumloremipsumlore psumloremipsumloremipsumloremipsumloremipsumloremipsumloremipsumloremipsumlore sumloremipsumloremipsumloremipsumloremipsumloremipsumloremipsumloremipsum remipsumloremipsumloremipsumloremipsumloremipsumloremipsumlore
